fix: add module opens for all selected test classes (#1885)
* fix: add module opens for all selected test classes

Pass selected class JDT handles to the launch delegate so Eclipse JDT can generate VM arguments for every test package without rediscovering the project.

Fixes #1883


* test: serialize launch request with Gson